# harbor-master

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/specs/001-foundation-runtime-detection/: README.md
.specify/specs/002-core-features/: spec.md
e2e/: runtime-detection.spec.ts  runtime-selection.spec.ts  status-monitoring.spec.ts
playwright-report/: index.html
specs/001-foundation-runtime-detection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-core-features/: plan.md  tasks.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: container.rs  image.rs  mod.rs
src-tauri/src/config/: mod.rs  preferences.rs
src-tauri/src/container/: inspect.rs  lifecycle.rs  list.rs  mod.rs  remove.rs  types.rs
src-tauri/src/image/: list.rs  mod.rs  prune.rs  pull.rs  remove.rs  types.rs
src-tauri/src/polling/: mod.rs  service.rs
src-tauri/src/runtime/: cache.rs  detector.rs  docker.rs  mod.rs  podman.rs  status.rs  version.rs
src-tauri/src/types/: mod.rs
src-tauri/tests/: integration_test.rs
src/components/: NoRuntimesMessage.tsx  RuntimeError.tsx  RuntimeSelector.tsx  StatusIndicator.tsx  Toast.tsx  WelcomeScreen.tsx
src/contexts/: ToastContext.tsx
src/hooks/: useContainers.ts  useRuntimeStatus.ts  useToast.ts
src/services/: containerService.ts  imageService.ts
src/stores/: containerStore.test.ts  containerStore.ts  imageStore.ts  runtimeStore.ts
src/types/: container.ts  image.ts  runtime.ts
src/utils/: containerFilters.ts  formatters.ts  imageFilters.ts  platform.ts
test-results/: .last-run.json
tests/: globalSetup.ts  polyfills.ts  setup.ts
(+28 files in other folders)
